--- a/pages/code.html
+++ b/pages/code.html
@@ -116,7 +116,7 @@
 
 
                   <h2 class="blog-post-title"><h3>An(other) interesting property of the Mandelbrot set</h3></h2>
-                  <img src="../images/mandelbrot_fib_sequence.png" width=500" height="400"/>
+                  <img src="../images/mandelbrot_fib_sequence.png"/>
                   <br>
                   This was taken from my Masters thesis and has always fascinated me.<br>
                   <small>01-2015</small>
@@ -156,9 +156,6 @@
             <h3>Elsewhere</h3>
             <ol class="list-unstyled">
               
-              <li><a href="https://bitbucket.org/jhayes14/">Bitbucket</a></li>
-              <li><a href="https://twitter.com/_jamiedh">Twitter</a></li>
-              <li><a href="https://www.linkedin.com/pub/jamie-hayes/67/195/7b0">LinkedIn</a></li>
               
             </ol>
           </div>
