--- a/pages/code.html
+++ b/pages/code.html
@@ -116,7 +116,7 @@
 
 
                   <h2 class="blog-post-title"><h3>An(other) interesting property of the Mandelbrot set</h3></h2>
-                  <img src="../images/mandelbrot_fib_sequence.png"/>
+                  <img src="../images/mandelbrot_fib_sequence.png" class="img-responsive"/>
                   <br>
                   This was taken from my Masters thesis and has always fascinated me.<br>
                   <small>01-2015</small>
