--- a/code.html
+++ b/code.html
@@ -7,7 +7,7 @@
     <title>jamie cs ucl site</title>
 
     <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,8 +22,8 @@
     <div class="blog-header">
       <center>
       <h1 class="blog-title">Jamie Hayes</h1>
-      <p class="lead blog-description"><a href="../index.html">About</a> - <a href="../pages/research.html">Research</a> - <a href="../pages/code.html">Code & Misc.</a> - 
-      <a href="../CV/jamiecv.pdf">CV</a></p>
+      <p class="lead blog-description"><a href="./index.html">About</a> - <a href="./research.html">Research</a> - <a href="./code.html">Code & Misc.</a> - 
+      <a href="./CV/jamiecv.pdf">CV</a></p>
       <!-- <a href="CV/jamiecv.pdf">CV</a>
       <a href="https://twitter.com/_jamiedh">Twitter</a>
       <a href="https://github.com/jhayes14">Github</a>
@@ -40,25 +40,25 @@
 
           <div class="col-md-3">
           <address class="rabbit">
-          <p><img src="../images/jh.jpeg" width="200px"></p>
+          <p><img src="./images/jh.jpeg" width="200px"></p>
           </address>
           <address class="rabbit">
             <strong>Email:</strong> j.hayes at cs.ucl.ac.uk<br>
             <p></p>
             <a href="https://github.com/jhayes14">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/github-brands.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/github-brands.svg"
             width=45" height="45">
             </a>
             <a href="https://twitter.com/_jamiedh">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/twitter-brands.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/twitter-brands.svg"
             width=45" height="45">
             </a>
             <a href="https://linkedin.com/in/jhayes14">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/linkedin-brands.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/linkedin-brands.svg"
             width=45" height="45">
             </a>
             <a href="https://scholar.google.com/citations?hl=en&user=bMI2GckAAAAJ">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/graduation-cap-solid.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/graduation-cap-solid.svg"
             width=45" height="45">
             </a><br>
             <!-- <a href="https://numer.ai/ai/jh">Numerai</a><br>
@@ -116,7 +116,7 @@
 
 
                   <h2 class="blog-post-title"><h3>An(other) interesting property of the Mandelbrot set</h3></h2>
-                  <img src="../images/mandelbrot_fib_sequence.png" class="img-responsive"/>
+                  <img src="./images/mandelbrot_fib_sequence.png" class="img-responsive"/>
                   <br>
                   This was taken from my Masters thesis and has always fascinated me.<br>
                   <small>01-2015</small>
