--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
     <title>jamie cs ucl site</title>
 
     <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,8 +22,8 @@
     <div class="blog-header">
       <center>
       <h1 class="blog-title">Jamie Hayes</h1>
-      <p class="lead blog-description"><a href="../pages/research.html">Research</a> - <a href="../pages/talks.html">Talks</a> - <a href="../pages/code.html">Code & Misc.</a> - 
-      <a href="../CV/jamiecv.pdf">CV</a></p>
+      <p class="lead blog-description"><a href="./index.html">About</a> - <a href="./research.html">Research</a> - <a href="./code.html">Code & Misc.</a> - 
+      <a href="./CV/jamiecv.pdf">CV</a></p>
       <!-- <a href="CV/jamiecv.pdf">CV</a>
       <a href="https://twitter.com/_jamiedh">Twitter</a>
       <a href="https://github.com/jhayes14">Github</a>
@@ -40,24 +40,25 @@
 
           <div class="col-md-3">
           <address class="rabbit">
-          <p><img src="../images/jh.jpeg" width="200px"></p>
+          <p><img src="./images/jh.jpeg" width="200px"></p>
           </address>
           <address class="rabbit">
             <strong>Email:</strong> j.hayes at cs.ucl.ac.uk<br>
+            <p></p>
             <a href="https://github.com/jhayes14">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/github-brands.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/github-brands.svg"
             width=45" height="45">
             </a>
             <a href="https://twitter.com/_jamiedh">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/twitter-brands.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/twitter-brands.svg"
             width=45" height="45">
             </a>
             <a href="https://linkedin.com/in/jhayes14">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/linkedin-brands.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/linkedin-brands.svg"
             width=45" height="45">
             </a>
             <a href="https://scholar.google.com/citations?hl=en&user=bMI2GckAAAAJ">
-            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="../images/graduation-cap-solid.svg"
+            <img alt="By Font Awesome Free 5.4.1 by @fontawesome - https://fontawesome.com, CC BY 4.0, https://commons.wikimedia.org/w/index.php?curid=73686066" src="./images/graduation-cap-solid.svg"
             width=45" height="45">
             </a><br>
             <!-- <a href="https://numer.ai/ai/jh">Numerai</a><br>
@@ -80,21 +81,28 @@
         <div class="col-md-9">
 
                   <b>Extensions and limitations of randomized smoothing for robustness guarantees</b>
-                  <a href="">  [pdf]</a><br>
+                  <a href="">  [pdf soon]</a><br>
                   J Hayes 06-2020 CVPR (workshop track) <br> 
-                  A classifiers robustness is evaluated in terms of different divergence measures. 
+                  A classifier's resistance to adversarial examples is evaluated in terms of different divergence measures. 
                   <p></p>
 
                   <b>Towards transformation-resilient provenance detection of digital media</b>
-                  <a href="https://openreview.net/pdf?id=S1gmvyHFDS">  [pdf]</a><br>
+                  <a href="https://openreview.net/pdf?id=S1gmvyHFDS">  [pdf update soon]</a><br>
                   J Hayes, K Dvijotham, Y Chen, S Dieleman, P Kohli, N Casagrande 09-2019 <br> 
                   Adversarial training is used to create a zero-bit watermarking scheme that is robust to a range of attacks. 
+                  <p></p>
+
+                  <b>LOGAN: Membership inference attacks against generative models</b>
+                  <a href="https://petsymposium.org/2019/files/papers/issue1/popets-2019-0008.pdf">  [pdf]</a>
+                  <a href="https://github.com/jhayes14/gen_mem_inf">  [code]</a><br>
+                  J Hayes, L Melis, G Danezis, E De Cristofaro 07-2019 PETS <br> 
+                  Generative learning can be as bad as discriminative learning when it comes to privacy. 
                   <p></p>
 
                   <b>A note on hyperparameters in black-box adversarial examples</b>
                   <a href="https://arxiv.org/pdf/1811.06539.pdf">  [pdf]</a>
                   <a href="https://github.com/jhayes14/black-box-attacks">  [code]</a><br>
-                  J Hayes 11-2018 <br> 
+                  J Hayes 12-2018 <br> 
                   The performance of a few methods to craft black-box adversarial examples is measured. 
                   <p></p>
 
@@ -105,89 +113,83 @@
                   Given a classifier and a discrete input, the smallest perturbation required to cause a different classification is found. 
                   <p></p>
 
-                  <b>Contamination Attacks in Multi-Party Machine Learning</b>
+                  <b>Contamination attacks in multi-party machine learning</b>
                   <a href="https://papers.nips.cc/paper/7895-contamination-attacks-and-mitigation-in-multi-party-machine-learning.pdf">  [pdf]</a><br>
                   J Hayes, O Ohrimenko 12-2018 NeurIPS<br> 
                   Learning to predict which party supplied an input in multi-party machine learning can mitigate attacks. 
                   <p></p>
 
-                  <b>On Visible Adversarial Perturbations & Digital Watermarking</b>
+                  <b>On visible adversarial perturbations & digital watermarking</b>
                   <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w32/Hayes_On_Visible_Adversarial_CVPR_2018_paper.pdf">  [pdf]</a><br>
                   J Hayes 06-2018 CVPR (workshop track)<br> 
                   Visible adversarial examples can be neutralized by saliency methods, however this is not a panacea. 
                   <p></p>
 
-                  <b>Learning Universal Adversarial Perturbations with Generative Models</b>
+                  <b>Learning universal adversarial perturbations with generative models</b>
                   <a href="https://arxiv.org/pdf/1708.05207.pdf">  [pdf]</a>
-                  <a href="https://github.com/jhayes14/UAN">  [code]</a><br>
+                  <a href="https://github.com/jhayes14/UAN">  [code]</a>
+                  <a href="./slides/dls2018presentation.pdf">  [slides]</a><br>
                   J Hayes 05-2018 DLS (IEEE S&P workshop) <br> 
                   A single adversarial perturbation is learnt by a generative model that can be applied to any input belonging to a target distribution. 
                   <p></p>
 
-                  <b>LOGAN: Membership Inference Attacks Against Generative Models</b>
-                  <a href="https://petsymposium.org/2019/files/papers/issue1/popets-2019-0008.pdf">  [pdf]</a>
-                  <a href="https://github.com/jhayes14/gen_mem_inf">  [code]</a><br>
-                  J Hayes, L Melis, G Danezis, E De Cristofaro 07-2019 PETS <br> 
-                  Generative learning can be as bad as discriminative learning when it comes to privacy. 
-                  <p></p>
-
-                  <b>The Loopix Anonymity System</b>
-                  <a href="https://arxiv.org/pdf/1703.00536.pdf">  [pdf]</a><br>
-                  A Piotrowska, J Hayes, T Elahi, S Meiser, G Danezis 08-2017 USENIX Security <br> 
-                  A low-latency anonymous communication system based on mix networks. 
-                  <p></p>
-
-                  <b>Generating Steganographic Images via Adversarial Training</b>
+                  <b>Generating steganographic images via adversarial training</b>
                   <a href="https://papers.nips.cc/paper/6791-generating-steganographic-images-via-adversarial-training.pdf">  [pdf]</a>
                   <a href="https://github.com/jhayes14/advsteg">  [code]</a><br>
                   J Hayes, G Danezis 12-2017 NeurIPS <br> 
                   Adversarial learning is applied to the problem of information hiding in digital images. 
                   <p></p>
 
-                  <b>Website Fingerprinting Defenses at the Application Layer</b>
+                  <b>AnNotify: A private notification service</b>
+                  <a href="https://eprint.iacr.org/2016/466.pdf">  [pdf]</a><br>
+                  A Piotrowska, J Hayes, N Gelernter, G Danezis, A Herzberg 10-2017 WPES <br> 
+                  A private notification service based on Bloom filters and sharding. 
+                  <p></p>
+
+                  <b>The Loopix anonymity system</b>
+                  <a href="https://arxiv.org/pdf/1703.00536.pdf">  [pdf]</a><br>
+                  A Piotrowska, J Hayes, T Elahi, S Meiser, G Danezis 08-2017 USENIX Security <br> 
+                  A low-latency anonymous communication system based on mix networks. 
+                  <p></p>
+
+                  <b>Website fingerprinting defenses at the application layer</b>
                   <a href="https://www.petsymposium.org/2017/papers/issue2/paper54-2017-2-source.pdf">  [pdf]</a>
                   <a href="https://github.com/camelids">  [code]</a><br>
                   G Cherubin, J Hayes, M Juarez 07-2017 PETS <br> 
                   A server-side website fingerprinting defense based on randomization of object sizes. 
                   <p></p>
 
-                  <b>AnNotify: A Private Notification Service</b>
-                  <a href="https://eprint.iacr.org/2016/466.pdf">  [pdf]</a>
-                  A Piotrowska, J Hayes, N Gelernter, G Danezis, A Herzberg 10-2017 WPES <br> 
-                  A private notification service based on Bloom filters and sharding. 
-                  <p></p>
-
-                  <b>TASP: Towards Anonymity Sets that Persist</b>
+                  <b>TASP: Towards anonymity sets that persist</b>
                   <a href="https://discovery.ucl.ac.uk/id/eprint/1532684/1/TASP.pdf">  [pdf]</a><br>
                   J Hayes, C Troncoso, G Danezis 10-2016 WPES <br> 
                   A global adversary observing the ingress/egress of an anonymity system can link communications by intersecting who was online at a certain time. 
                   By pre-learning communication patterns, we can group people intelligently into communicating batches, which extends the time until everyone is doomed.
                   <p></p>
 
-                  <b><em>k</em>-fingerprinting: a Robust Scalable Website Fingerprinting Technique</b>
+                  <b><em>k</em>-fingerprinting: a robust scalable website fingerprinting technique</b>
                   <a href="https://arxiv.org/pdf/1509.00789.pdf">  [pdf]</a>
                   <a href="https://github.com/jhayes14/k-FP">  [code]</a>
-                  <a href="unmonitored.tar.gz">[unmonitored data]</a>
-                  <a href="alexa.tar.gz">[Alexa data]</a>
-                  <a href="hs.tar.gz">[Hidden services data]</a><br>
+                  <a href="./slides/k-fp.pdf">  [slides]</a><br>
                   J Hayes, G Danezis 08-2016 USENIX Security <br> 
                   Random forests and nearest neighbour classifiers are used to learn a robust website fingerprinting model.
                   <p></p>
 
-                  <b>Traffic Confirmation Attacks Despite Noise</b>
-                  <a href="https://arxiv.org/pdf/1601.04893.pdf">  [pdf]</a><br>
+                  <b>Traffic confirmation attacks despite noise</b>
+                  <a href="https://arxiv.org/pdf/1601.04893.pdf">  [pdf]</a>
+                  <a href="./slides/confirmation_attack_UEOP16.pdf">  [slides]</a><br>
                   J Hayes 02-2016 NDSS (workshop track) <br> 
                   A hashing algorithm based on projecting network traffic flows is used to link communicating parties in anonymous communication systems.
                   <p></p>
 
-                  <b>Guard Sets for Onion Routing</b>
-                  <a href="https://petsymposium.org/2015/papers/05_Hayes.pdf">  [pdf]</a><br>
+                  <b>Guard sets for onion routing</b>
+                  <a href="https://petsymposium.org/2015/papers/05_Hayes.pdf">  [pdf]</a>
+                  <a href="./slides/guardset_talk_PETS15.pdf">  [slides]</a><br>
                   J Hayes 07-2015 PETS <br> 
                   The Tor entry guard system is re-designed to provide better security properties.
                   <p></p>
 
-                  <b>An Introduction to the Dynamics of Real and Complex Quadratic Polynomials</b>
-                  <a href="../papers/Complex Project Post copy.pdf">  [pdf]</a><br>
+                  <b>An introduction to the dynamics of real and complex quadratic polynomials</b>
+                  <a href="./papers/Complex Project Post copy.pdf">  [pdf]</a><br>
                   J Hayes 07-2011 <br> 
                   Masters thesis on the properties of quadratics (e.g. Mandelbrot set and Julia sets).
                   <p></p>
