--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>jamie cs ucl site</title>
+    <title>Jamie Hayes</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,7 +22,7 @@
     <div class="blog-header">
       <center>
       <h1 class="blog-title">Jamie Hayes</h1>
-      <p class="lead blog-description"><a href="./index.html">About</a> - <a href="./pages/research.html">Research</a> - <a href="./pages/code.html">Code & Misc.</a> - 
+      <p class="lead blog-description"><a href="./index.html">About</a> - <a href="./research.html">Research</a> - <a href="./code.html">Code & Misc.</a> - 
       <a href="./CV/jamiecv.pdf">CV</a></p>
       <!-- <a href="CV/jamiecv.pdf">CV</a>
       <a href="https://twitter.com/_jamiedh">Twitter</a>
