added masters thesis

--- a/research.html
+++ b/research.html
@@ -189,7 +189,7 @@
                   <p></p>
 
                   <b>An introduction to the dynamics of real and complex quadratic polynomials</b>
-                  <a href="./papers/Complex Project Post copy.pdf">  [pdf]</a><br>
+                  <a href="./papers/jh_masters.pdf">  [pdf]</a><br>
                   J Hayes 07-2011 <br> 
                   Masters thesis on the properties of quadratics (e.g. Mandelbrot set and Julia sets).
                   <p></p>
@@ -226,10 +226,6 @@
           <div class="sidebar-module">
             <h4>Elsewhere</h4>
             <ol class="list-unstyled">
-              
-              <li><a href="https://bitbucket.org/jhayes14/">Bitbucket</a></li>
-              <li><a href="https://twitter.com/_jamiedh">Twitter</a></li>
-              <li><a href="https://www.linkedin.com/pub/jamie-hayes/67/195/7b0">LinkedIn</a></li>
               
             </ol>
           </div>
