--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                  <h4>2017</h5>
                   <ul>
-                  I gave talk at IBM Thomas J. Watson Research Center on adversarial machine learning.
+                  I gave a talk at IBM Thomas J. Watson Research Center on adversarial machine learning.
                   <br>
                   <small>10-2017</small>
                   <p></p>
