--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="col-md-9">
-            <p class="rabbit">I am a research scientist at <a href="https://deepmind.com">Google DeepMind</a> and a student studying for a PhD at the Information Security group at UCL. My supervisor is <a href="http://www0.cs.ucl.ac.uk/staff/G.Danezis/">George Danezis</a> and
+            <p class="rabbit">I am a research scientist at <a href="https://deepmind.com">Google DeepMind</a> and a student studying for a PhD in the Information Security group at UCL. My supervisor is <a href="http://www0.cs.ucl.ac.uk/staff/G.Danezis/">George Danezis</a> and
             second supervisor is <a href="https://scholar.google.com/citations?user=PNH24toAAAAJ&hl=en">Thore Graepel</a>.</p>
 
           <p class="rabbit">My research interests include adversarial machine learning, network traffic analysis, privacy, anonymity and machine learning (ML) applications to information security. Before joining UCL I studied under Anuj Dawar in the Programming, Logic, and Semantics Group at the University of Cambridge, working on the parameterized complexity of the graph isomorphism problem.</a></p>
