--- a/code.html
+++ b/code.html
@@ -93,24 +93,24 @@
                   <small>10-2016</small>
 
 
-                  <h2 class="blog-post-title"><h3><a href="https:github.com/jhayes14/tabber">Tabber</a></h3></h2>
+                  <h2 class="blog-post-title"><h3><a href="https://github.com/jhayes14/tabber">Tabber</a></h3></h2>
                   For our work on website fingerprinting, I needed to keep fine-grained information about a browsing session. I couldn't find a suitable tool so I created one myself. Although very early in development it did the job.
                   <br>
                   <small>08-2016</small>
 
                   <h2 class="blog-post-title"><h3>Numerai</h3></h2>
                   Numerai is Kaggle-like competition on encrypted data. During the first year of it's launch I tinkered with a few models that were moderately successful. Although the competition
-                  has probably progressed since then I am making available some of the code I used <a href="https:github.com/jhayes14/Num">here</a>.
+                  has probably progressed since then I am making available some of the code I used <a href="https://github.com/jhayes14/Num">here</a>.
                   <br>
                   <small>07-2016</small>
 
                   <h2 class="blog-post-title"><h3>Face GAN</h3></h2>
-                  I trained a GAN to learn what a face looks like and then produce its own examples. Read more about that <a href="https:github.com/jhayes14/GAN">here</a>.
+                  I trained a GAN to learn what a face looks like and then produce its own examples. Read more about that <a href="https://github.com/jhayes14/GAN">here</a>.
                   <br>
                   <small>07-2016</small>
 
                   <h2 class="blog-post-title"><h3>Decrypt WLAN traffic</h3></h2>
-                  I wrote a small educational guide of the dangers of browsing without HTTPS. Read more about that <a href="https:github.com/jhayes14/web-uncover">here</a>.
+                  I wrote a small educational guide of the dangers of browsing without HTTPS. Read more about that <a href="https://github.com/jhayes14/web-uncover">here</a>.
                   <br>
                   <small>07-2016</small>
 
