--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                   <h4>2018</h5>
                   <ul>
-                  I will spend the summer at Google Research working with Ian Fisher on conditioning techniques in generative machine learning.
+                  I will spend the summer at Google Research working with Ian Fischer on conditioning techniques in generative machine learning.
                   <br>
                   <small>04-2018</small>
                   <p></p>
