added iclr paper

--- a/research.html
+++ b/research.html
@@ -86,6 +86,12 @@
                   A classifier's resistance to adversarial examples is evaluated in terms of different divergence measures. 
                   <p></p>
 
+		  <b>A framework for robustness certfification of smoothed classifiers using f-divergences</b>
+		  <a href="https://openreview.net/pdf?id=SJlKrkSFPH">  [pdf]</a><br>
+                  K Dvijotham, J Hayes, B Balle, Z Kolter, C Qin, A Gyorgy, K Xiao, S Gowal, P Kohli 05-2020 ICLR <br> 
+                  We can certify properties of a neural network under different threat models. 
+                  <p></p>
+
                   <b>Towards transformation-resilient provenance detection of digital media</b>
                   <a href="https://openreview.net/pdf?id=S1gmvyHFDS">  [pdf update soon]</a><br>
                   J Hayes, K Dvijotham, Y Chen, S Dieleman, P Kohli, N Casagrande 09-2019 <br> 
