added iclr paper and fixed typo

--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
                   A classifier's resistance to adversarial examples is evaluated in terms of different divergence measures. 
                   <p></p>
 
-		  <b>A framework for robustness certfification of smoothed classifiers using f-divergences</b>
+		  <b>A framework for robustness certification of smoothed classifiers using f-divergences</b>
 		  <a href="https://openreview.net/pdf?id=SJlKrkSFPH">  [pdf]</a><br>
                   K Dvijotham, J Hayes, B Balle, Z Kolter, C Qin, A Gyorgy, K Xiao, S Gowal, P Kohli 05-2020 ICLR <br> 
                   We can certify properties of a neural network under different threat models. 
